# nova-scotia-practice

./: Cargo.toml  README.md
circuit_files/: nova_1.cpp  nova_1.wasm
circuits/2inputs/pasta/: 2inputs.circom
circuits/3inputs/bn254/: 3inputs.circom  3inputs.r1cs  3inputs.wasm
circuits/eddsa/: eddsa_poseidon.r1cs  eddsa_poseidon.wasm
circuits/pasta/: pasta.wasm
circuits/poseidon/: poseidon_hash.circom  poseidon_hash.r1cs  poseidon_hash.wasm
circuits/poseidon_2_priv_inputs/: poseidon_2_priv_inputs.circom  poseidon_2_priv_inputs.r1cs  poseidon_2_priv_inputs.wasm
src/: bn254.rs  bn254_2inputs.rs  bn254_3_inputs.rs  bn254_3inputs.rs  eddsa_poseidon.rs  eddsa_poseidon_nova.rs  eddsaposeidon.rs  eddsaposeidonnova.rs  lib.rs  main.rs  pasta.rs  pasta_2inputs.rs  poseidon.rs  poseidon_2_priv_inputs.rs  test.rs
