[package]
name = "nova-scotia-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
nova-scotia = "0.5.0"
nova-snark = "0.23.0"
pasta_curves = "0.5"
serde_json = "1.0.105"
arkeddsa = { git = "https://github.com/kilic/arkeddsa.git" }
ark-ff = "^0.4.0"
ark-crypto-primitives = {version = "^0.4.0", default-features = false, features = ["sponge", "crh"]}
ark-ec = "^0.4.0"
digest = "0.10"
rand_core = {version = "0.6", default-features = false}
ark-ed-on-bn254 = {version = "0.4.0"}
sha2 = "0.10"
num-bigint = "0.4.6"



